--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www",
-    "serverstart": "DEBUG=express-mini-message-board:* npm run devstart"
+    "serverstart": "DEBUG=ODIN-MINI-MESSAGE-BOARD-POSTGRESQL:* npm run devstart"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.5",
+    "dotnet": "^1.1.4",
+    "ejs": "^3.1.10",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "mongoose": "^8.1.2",
     "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "pg": "^8.12.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
